<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_recently_played"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mymewsic.RecentlyPlayedActivity">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.android.miwok.MainActivity">

        <TextView
            style="@style/ActivityDescription"
            android:background="#FDDDDD"
            android:text="@string/recently_played_description"/>

        <TextView
            android:id="@+id/current"
            style="@style/ButtonDescription"
            android:background="#FD8E09"
            android:text="@string/cur" />

        <TextView
            android:id="@+id/library"
            style="@style/ButtonDescription"
            android:background="#FD8E09"
            android:text="@string/library" />

        <TextView
            android:id="@+id/artists"
            style="@style/ButtonDescription"
            android:background="#FD8E09"
            android:text="@string/artists" />

        <TextView
            android:id="@+id/albums"
            style="@style/ButtonDescription"
            android:background="#FD8E09"
            android:text="@string/albums" />




    </LinearLayout>

</RelativeLayout>
